--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 	"main": "dist/src/index.js",
 	"type": "module",
 	"scripts": {
-		"build": "tsc && node .",
-		"start": "node ."
+		"build": "tsc && cross-env NODE_ENV=development node .",
+		"start": "cross-env NODE_ENV=production node ."
 	},
 	"repository": {
 		"type": "git",
