--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@types/got": "^9.6.12",
 		"@types/node": "^16.11.9",
 		"@types/node-cron": "^3.0.0",
-		"typescript": "^4.5.2"
+		"typescript": "^4.5.2",
+		"cross-env": "^7.0.3"
 	}
 }
