Fix: Add author to package.json

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"url": "git+https://github.com/OtterDevelopment/PositivePeter.git"
 	},
 	"keywords": [],
-	"author": "",
+	"author": "xPolar",
 	"license": "ISC",
 	"bugs": {
 		"url": "https://github.com/OtterDevelopment/PositivePeter/issues"
