--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ MONGO_URI="mongodb+srv://clusterName:clusterPassword@userName.abcde.mongodb.net/
 CONSOLE_HOOK="https://discord.com/api/webhooks/webhookId/webhookToken"
 GUILD_HOOK="https://discord.com/api/webhooks/webhookId/webhookToken"
 SUGGESTION_HOOK="https://discord.com/api/webhooks/webhookId/webhookToken"
+
+# API Keys
+DATADOG_API_KEY="DATADOG_API_KEY"
