--- a/package.json
+++ b/package.json
@@ -23,19 +23,21 @@
 		"@lukeed/ms": "^2.0.0",
 		"@sentry/node": "^6.15.0",
 		"@sentry/tracing": "^6.15.0",
+		"axios": "^0.24.0",
 		"colorette": "^2.0.16",
+		"datadog-metrics": "^0.9.3",
 		"discord.js": "github:FireDiscordBot/discord.js",
 		"dotenv-extended": "^2.9.0",
 		"hastebin": "^0.2.1",
-		"mongodb": "^4.2.0",
-		"petitio": "^1.4.0"
+		"mongodb": "^4.2.0"
 	},
 	"devDependencies": {
 		"@sentry/types": "^6.15.0",
+		"@types/datadog-metrics": "^0.6.2",
 		"@types/got": "^9.6.12",
 		"@types/node": "^16.11.9",
 		"@types/node-cron": "^3.0.0",
-		"typescript": "^4.5.2",
-		"cross-env": "^7.0.3"
+		"cross-env": "^7.0.3",
+		"typescript": "^4.5.2"
 	}
 }
