--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
 		"datadog-metrics": "^0.9.3",
 		"discord.js": "github:FireDiscordBot/discord.js",
 		"dotenv-extended": "^2.9.0",
-		"mongodb": "^4.2.0",
-		"petitio": "^1.4.0"
+		"mongodb": "^4.2.0"
 	},
 	"devDependencies": {
 		"@sentry/types": "^6.15.0",
